1/3/10
---------

Test Builder
	New test cases to deal with combo boxes
	
Engine
	New improved algorithm for finding images
	Html UL, OL now have items property	

Fixed Bugs
	Log displayed un-necessary errors
	HTMLTable , fix rows by index and cells by index (HtmlTr)
	

4/3/10
---------

Test Builder
	Fixed 'object reference' log error when control is not found, to more descriptive error
	Added 'scenario' configuration for log folder structure
	Fixed a bug in while test case re-evaluation

Engine
	Fixed a bug in FindByProperty of null references
	Replaced gocr with tesseract ocr


8/3/10
---------

Test Builder
	Fixed a bug in setting log file for single test case run
Engine
	Fixed memory leak in finding images
	Fixed a crash when closing all ie windows
	Fixed a bug in initialization of web document
	
	