@@ -216,8 +216,7 @@ namespace QAliber.VS2005.Plugin
 			// 
 			this.toolStripComboBoxSpyAs.Items.AddRange(new object[] {
 			"UI Automation",
-			"Web",
-			"WPF"});
+			"Web (DOM)"});
 			this.toolStripComboBoxSpyAs.Name = "toolStripComboBoxSpyAs";
 			this.toolStripComboBoxSpyAs.Size = new System.Drawing.Size(121, 39);
 			this.toolStripComboBoxSpyAs.ToolTipText = "Spy & Record Controls Method";
