@@ -51,6 +51,7 @@ namespace QAliber.Repository.CommonTestCases.UI.Mouse
 
 		[Category("Mouse")]
 		[Description("The coordinate in pixels, relative to the upper left corner of the control you selected")]
+		[TypeConverter(typeof(ExpandableObjectConverter))]
 		public Point Coordinate
 		{
 			get { return point; }
