@@ -1,3 +1,11 @@
+Known Limitations
+--------------------------
+
+Web automation works on a single page of internet explorer (no multi tabs or multi processes)
+Calling code must run in STA apartment
+Memory leaks in tesseract OCR engine
+
+
 1/3/10
 ---------
 
